tests/snapshots/benchmark__cache_stability_default.snap
---
source: tests/benchmark.rs
assertion_line: 602
expression: "Value::Object(report)"
---
{
  "at_the_boundary": 39.685,
  "browser_heavy": 1.181,
  "coding": 74.39,
  "exempt_heavy": 100.0,
  "giant_paste": 83.339,
  "long_running": 83.959,
  "mcp_non_playwright": 60.788,
  "mixed_realistic": 46.191,
  "pure_chat_floor": 100.0,
  "read_heavy": 46.602,
  "repeated_grep": 23.902,
  "resumed_session": 87.441,
  "stale_input_heavy": 54.772,
  "subagent_heavy": 76.188,
  "thinking_heavy": 49.828,
  "unique_bash_spam": 36.67
}
